# meee-low.github.io

./: 404.html  asset-manifest.json  blog.html  index.html  interactive.html  package-lock.json  package.json  projects-dev.html  svelte.config.js  tailwind.config.js  tailwind.config.ts
.github/workflows/: deploy.yml
_app/: version.json
docs/: 404.html  blog.html  index.html  interactive.html  my-cv.html  projects-dev.html
docs/_app/: version.json
docs/blog/: top_things.html
docs/interactive/: audio-splicer.html  boids.html  bracketeering.html  redux-fg.html
public/: index.html
src/: App.tsx  app.css  app.html  index.css  react-app-env.d.ts
src/components/: Footer.tsx  Header.tsx  ProjectCarousel.tsx  ProjectCarouselSlide.tsx  ProjectList.tsx  ProjectListCard.tsx
src/data/: aboutme.json  iconmap.json  projects.csv  projects.json  projects.xlsx
src/interfaces/: ProjectProps.tsx
src/lib/: data.ts  interfaces.ts  markdownParsing.ts  myInfo.ts  projects.ts  result.ts  stores.ts  strings.ts  utils.ts
src/pages/: AboutMe.tsx  FrontPage.tsx
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/style/: oldstyle.css  style.css
src/utils/: cropper.py  cryptography.tsx  image_tools.py
static/: index.html
static/css/: main.1ef22e3d.css  main.1ef22e3d.css.map  main.a7fd0fbf.css  main.a7fd0fbf.css.map  main.c5daa446.css  main.c5daa446.css.map  main.c6e7a9ed.css  main.c6e7a9ed.css.map
static/js/: 787.56fcebfa.chunk.js  (+19 more)
wasm/boids/: Cargo.toml  build_command.txt  index.js
wasm/boids/src/: lib.rs
wasm/boids/src/boids/: mod.rs  params.rs
(+1074 files in other folders)
