[package]
name = "boids"
version = "0.1.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.15", features = ["js"] }
js-sys = "0.3.72"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name="runlocally"
path="src/boids/mod.rs"
